# proxy-tester-test

./: .eslintignore  .eslintrc.js  .eslintrc.json  .lintstagedrc.js  .prettierignore  UPDATE_LOG.md  components.json  index.html  install.json  next.config.js  package.json  pnpm-lock.yaml  prettier.config.cjs  tailwind.config.js  tsconfig.json  vite.config.mjs  vite.config.ts
.github/workflows/: main.yml  release.yml
public/: loading.html
scripts/: release.mjs  updatelog.mjs  updater.mjs
src/: i18n.ts  main.tsx  routes.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.macos.config.json  tauri.windows.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: global_interpark.rs  global_melon.rs  main.rs  nike.rs  setup.rs  utils.rs
src/app/: layout.tsx  page.tsx
src/components/: ContentMenu.tsx  ImportButton.tsx  ImportDialog.tsx  ProxyVirtualizedTable.tsx  SettingsDialog.tsx  TargetInput.tsx  TestButton.tsx  empty-proxy.tsx  interpark-queue-task-dialog.tsx  no-ssr-wrapper.tsx  page-container.tsx  providers.tsx  proxy-edit-dialog.tsx  proxy-list-edit-dialog.tsx  proxy-status-list.tsx  proxy-table-row.tsx  proxy-table.tsx  root-layout-wrapper.tsx  tailwind-indicator.tsx  target-input.tsx  tooltip.tsx  updater-dialog.tsx  updater.tsx
src/configs/: layout.ts
src/context/: LayoutContext.tsx  ProxyTaskContext.tsx  SettingsContext.tsx  types.ts
src/data/: proxy.ts
src/hooks/: use-platform-info.ts  use-update.ts  useLayout.ts  useSettings.ts
src/layouts/: Layout.tsx  types.ts
src/lib/: config.ts  (+7 more)
(+84 files in other folders)
