[package]
name = "app"
version = "0.1.0"
description = "Proxy Tester"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.66"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = [ "api-all"] }
reqwest = { version = "0.11.14", features = ["json", "socks", "trust-dns"] }
tokio = { version = "1.26.0", features = ["full"] }
env_logger = "0.10.0"
trust-dns-resolver = "0.23.0"
lazy_static = "1.4.0"
rand = "0.8.5"
chrono = { version = "0.4.26", features = ["serde"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
